// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get 5 rows of dataset 1`] = `
[
  [
    20,
    "CDISCPILOT01",
    "01-701-1203",
    "1203",
    "701",
    "701",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    19391,
    19573,
    183,
    0,
    0,
    81,
    ">80",
    3,
    "YEARS",
    "BLACK OR AFRICAN AMERICAN",
    2,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    25.9,
    "25-<30",
    160,
    66.2,
    13,
    18736,
    21.3,
    ">=12",
    19383,
    "2013-02-02",
    "2013-08-03",
    12,
    19573,
    "COMPLETED",
    "Completed",
    21,
  ],
  [
    21,
    "CDISCPILOT01",
    "01-701-1211",
    "1211",
    "701",
    "701",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    19312,
    19370,
    59,
    54,
    3186,
    76,
    "65-80",
    2,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "",
    "Y",
    17.7,
    "<25",
    160,
    45.4,
    12,
    18340,
    31.4,
    ">=12",
    19296,
    "2012-11-15",
    "2013-01-14",
    9,
    19372,
    "DEATH",
    "Death",
    12,
  ],
  [
    22,
    "CDISCPILOT01",
    "01-701-1234",
    "1234",
    "701",
    "701",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    19447,
    19623,
    177,
    0,
    0,
    69,
    "65-80",
    2,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    23.4,
    "<25",
    181.6,
    77.1,
    18,
    17024,
    79.3,
    ">=12",
    19437,
    "2013-03-30",
    "2013-09-22",
    12,
    19623,
    "COMPLETED",
    "Completed",
    20,
  ],
  [
    23,
    "CDISCPILOT01",
    "01-701-1239",
    "1239",
    "701",
    "701",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    19734,
    19914,
    181,
    76.8,
    13905,
    56,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "M",
    "HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    33.6,
    ">=30",
    168.9,
    95.9,
    11,
    15971,
    123.2,
    ">=12",
    19720,
    "2014-01-11",
    "2014-07-11",
    12,
    19915,
    "COMPLETED",
    "Completed",
    23,
  ],
  [
    24,
    "CDISCPILOT01",
    "01-701-1275",
    "1275",
    "701",
    "701",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    19761,
    19874,
    114,
    77.2,
    8802,
    61,
    "<65",
    1,
    "YEARS",
    "AMERICAN INDIAN OR ALASKA NATIVE",
    6,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "",
    "",
    24.6,
    "<25",
    167.6,
    69,
    12,
    18887,
    28.3,
    ">=12",
    19748,
    "2014-02-07",
    "2014-06-14",
    10,
    19888,
    "WITHDRAWAL BY SUBJECT",
    "Withdrew Consent",
    22,
  ],
]
`;

exports[`Get 5 rows of dataset as an object 1`] = `
[
  [
    20,
    "CDISCPILOT01",
    "01-701-1203",
    "1203",
    "701",
    "701",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-02-02",
    "2013-08-03",
    183,
    0,
    0,
    81,
    ">80",
    3,
    "YEARS",
    "BLACK OR AFRICAN AMERICAN",
    2,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    25.9,
    "25-<30",
    160,
    66.2,
    13,
    "2011-04-19",
    21.3,
    ">=12",
    "2013-01-25",
    "2013-02-02",
    "2013-08-03",
    12,
    "2013-08-03",
    "COMPLETED",
    "COMPLETED",
    "",
    21,
  ],
  [
    21,
    "CDISCPILOT01",
    "01-701-1211",
    "1211",
    "701",
    "701",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2012-11-15",
    "2013-01-12",
    59,
    54,
    3186,
    76,
    "65-80",
    2,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "",
    "Y",
    17.7,
    "<25",
    160,
    45.4,
    12,
    "2010-03-19",
    31.4,
    ">=12",
    "2012-10-30",
    "2012-11-15",
    "2013-01-14",
    9,
    "2013-01-14",
    "DEATH",
    "DISCONTINUED",
    "Death",
    12,
  ],
  [
    22,
    "CDISCPILOT01",
    "01-701-1234",
    "1234",
    "701",
    "701",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-03-30",
    "2013-09-22",
    177,
    0,
    0,
    69,
    "65-80",
    2,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    23.4,
    "<25",
    181.6,
    77.1,
    18,
    "2006-08-11",
    79.3,
    ">=12",
    "2013-03-20",
    "2013-03-30",
    "2013-09-22",
    12,
    "2013-09-22",
    "COMPLETED",
    "COMPLETED",
    "",
    20,
  ],
  [
    23,
    "CDISCPILOT01",
    "01-701-1239",
    "1239",
    "701",
    "701",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2014-01-11",
    "2014-07-10",
    181,
    76.8,
    13905,
    56,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "M",
    "HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    33.6,
    ">=30",
    168.9,
    95.9,
    11,
    "2003-09-23",
    123.2,
    ">=12",
    "2013-12-28",
    "2014-01-11",
    "2014-07-11",
    12,
    "2014-07-11",
    "COMPLETED",
    "COMPLETED",
    "",
    23,
  ],
  [
    24,
    "CDISCPILOT01",
    "01-701-1275",
    "1275",
    "701",
    "701",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2014-02-07",
    "2014-05-31",
    114,
    77.2,
    8802,
    61,
    "<65",
    1,
    "YEARS",
    "AMERICAN INDIAN OR ALASKA NATIVE",
    6,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "",
    "",
    24.6,
    "<25",
    167.6,
    69,
    12,
    "2011-09-17",
    28.3,
    ">=12",
    "2014-01-25",
    "2014-02-07",
    "2014-06-14",
    10,
    "2014-06-14",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    22,
  ],
]
`;

exports[`Get 100 rows of dataset 1`] = `[]`;
